[package]
name = "interceptors"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bitcode = { version = "0.6.6", features = ["serde"] }
ewebsock = "0.8.0"
fxhash = "0.2.1"
ldtk2 = "0.8.0"
macroquad = { version = "0.4.14", features = ["audio", "glam-serde"] }
macroquad-tiled = "0.2.1"
nalgebra = "0.33.2"
rapier2d = { version = "0.26.1", features = ["serde-serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.2", features = ["derive"] }
tungstenite = "0.23.0"
#uuid = { version = "1.17.0", features = ["v4", "js"] }
getrandom ={ version = "*", features = ["js"]}
web-time = "1.1.0"
web-sys = { version = "0.3.77", features = ["console"] }
noise = "0.9.0"
cs-utils = "0.21.1"
dhat = "0.3.3"
#web-sys = { version = "0.3.72", features = ["console"] }

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[lib]
name = "interceptors_lib"
path = "src/lib.rs"

[profile.release]
debug = 1

[features]
dhat-heap = []    # if you are doing heap profiling
dhat-ad-hoc = []  # if you are doing ad hoc profiling
