[package]
name = "interceptors"
version = "0.1.0"
edition = "2024"
#build = "build.rs"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "link-arg=-fuse-ld=mold"]

[dependencies]
bitcode = { version = "0.6.6", features = ["serde"] }
ewebsock = "0.8.0"
fxhash = "0.2.1"
macroquad = { version = "0.4.14", features = ["audio", "glam-serde"] }
rapier2d = { version = "0.32.0", features = ["serde-serialize", "simd-stable"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
strum = { version = "0.27.2", features = ["derive"] }
tungstenite = "0.23.0"
#uuid = { version = "1.17.0", features = ["v4", "js"] }
getrandom ={ version = "*", features = ["js"]}
web-time = "1.1.0"
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlCanvasElement", "HtmlElement", "HtmlStyleElement", "Window", "console"] }
noise = "0.9.0"
cs-utils = "0.21.1"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
log = "0.4.29"
env_logger = "0.11.8"
pretty_env_logger = "0.5.0"
colored = "3.0.0"
derive_more = { version = "2.1.1", features = ["from"] }
include_dir = { version = "0.7.4", features = ["glob"] }
activity = "0.9.0"
glamx = { version = "0.1.3", features = ["nalgebra"] }
#rhai = "1.23.6"
#gilrs = "0.11.0"
#web-sys = { version = "0.3.72", features = ["console"] }

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "editor"
path = "src/editor/main.rs"

[[bin]]
name = "decoration-util"
path = "src/decoration-util/main.rs"

[lib]
name = "interceptors_lib"
path = "src/lib.rs"

[profile.dev.package.rapier2d]
opt-level = 3

[profile.dev.package.hound]
opt-level = 3

[profile.release]
debug = true  


[features]
discord = []
no-sound = []
nightly = []
